# capstone-project

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  valgrind-out.txt
include/: detector.h  network.h  visualizer.h
src/: main.cpp  network.cpp
